syntax = "proto3";
option csharp_namespace = "Project.ServiceInformationService.Protos";

service ServiceInformationService  {
  rpc GetSpecialization (GetSpecializationRequest) returns (GetSpecializationResponse);
  rpc GetAllSpecialization (GetAllSpecializationRequest) returns (GetAllSpecializationResponse);
  rpc CheckSpecialization (GetSpecializationRequest) returns (GetSpecializations);
}
message GetSpecializationRequest  {
  string SpecializationID = 1;
}
message GetSpecializationResponse  {
  string SpecializationName = 1;
}
message GetAllSpecializationRequest  {
  repeated string SpecializationIDs = 1;
}
message GetAllSpecializationResponse  {
  repeated GetSpecializations Specialization = 1;
}
message GetSpecializations {
  string SpecializationID = 1;
  string SpecializationName = 2;
}